# Amplitude-Matrix-Solver

./: .gitignore  README.md  pyproject.toml
numerics/: __init__.py  postprocess.py
numerics/core/: __init__.py  backend.py  frequency.py  jacobian.py  liouvillian.py  r_matrix.py
numerics/io/: __init__.py  base.py  formats.py
numerics/models/: __init__.py  base.py  kerr_2mode.py  kerr_3mode_chain.py  kerr_3mode_hopf.py  kerr_3pa.py  vdp_2mode.py
numerics/scans/: __init__.py  bifurcation.py  continuation.py  multistability.py  parallel.py  traversal.py
numerics/solvers/: __init__.py  backends.py  batched.py  continuation.py  deflation.py  guess_bounds.py  multi_search.py  seeds.py  steady_state.py
numerics/utils/: __init__.py  fixed_points.py  progress.py  validation.py
scripts/: analyze_vdp_2mode_multistability.py  benchmark_batched_solver.py  benchmark_quick.py  run_2mode_kerr_sweep.py  run_2mode_vdp_sweep.py  run_3mode_hopf_sweep.py
tests/: test_backend.py  test_batched_solver.py  test_continuation.py  test_deflation.py  test_frequency.py  test_gpu_ring_scan.py  test_io.py  test_jacobian.py  test_multi_search.py  test_multistability_scan.py  test_r_matrix.py  test_steady_state.py
