[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nonlinear-ep-numerics"
version = "0.1.0"
description = "Unified numerical package for nonlinear exceptional-point and bifurcation dynamics in the R-matrix formalism."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Research Group"}
]
keywords = ["nonlinear", "exceptional-point", "bifurcation", "R-matrix", "quantum-optics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "sympy>=1.12",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x>=13.0"]
test = ["pytest>=7.0"]
all = ["cupy-cuda12x>=13.0", "pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["numerics*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
